# OpenRoomAlive

./: .arcconfig  .deploy  .gitignore  CMakeLists.txt  README.md  install.sh  runmaster.sh  runprocam.sh
core/: Async.h  CMakeLists.txt  Compression.cc  Compression.h  Conv.cc  Conv.h  Exception.cc  Exception.h  ExceptionTest.cc  GL.h  GLViewer.cc  GLViewer.h  Geometry.cc  Geometry.h  GeometryTest.cc  GrayCode.cc  GrayCode.h  Projection.cc  Projection.h  ProjectionTest.cc  Protocol.thrift  Types.cc  Types.h
data/: README.md
master/: CMakeLists.txt  Calibrator.cc  Calibrator.h  CalibratorTest.cc  ConnectionHandler.cc  ConnectionHandler.h  EnviromentDrawer.cc  EnviromentDrawer.h  Event.cc  Event.h  EventStream.cc  EventStream.h  GLViewer.cc  GLViewer.h  LaserDrawer.cc  LaserDrawer.h  MasterApplication.cc  MasterApplication.h  MasterConnectionHandler-inl.h  MasterConnectionHandler.cc  MasterConnectionHandler.h  MasterServer.cc  MasterServer.h  MasterServerFactory.cc  MasterServerFactory.h  MockConnectionHandler.cc  MockConnectionHandler.h  PointCloud.cc  PointCloud.h  ProCam.cc  ProCam.h  ProCamRecorder.cc  ProCamRecorder.h  ProCamSystem.cc  ProCamSystem.h  RecordingConnectionHandler.cc  RecordingConnectionHandler.h  main.cc
procam/: BGRDCamera.cc  BGRDCamera.h  BaselineCapture.cc  BaselineCapture.h  CMakeLists.txt  Display.cc  Display.h  GLDisplay.cc  GLDisplay.h  KinectCamera.cc  KinectCamera.h  KinectFileLogger.cc  KinectFileLogger.h  LaserDetector.cc  LaserDetector.h  MockCamera.cc  MockCamera.h  MockDisplay.cc  MockDisplay.h  ProCamApplication.cc  ProCamApplication.h  main.cc
slave/: BGRDCamera.cc  BGRDCamera.h  BaselineCapture.cc  BaselineCapture.h  CMakeLists.txt  Display.cc  Display.h  GLDisplay.cc  GLDisplay.h  GrayCode.cc  GrayCode.h  KinectCamera.cc  KinectCamera.h  KinectFileLogger.cc  KinectFileLogger.h  MockCamera.cc  MockCamera.h  MockDisplay.cc  MockDisplay.h  ProCamApplication.cc  ProCamApplication.h  ProCamServer.cc  ProCamServer.h  RGBDCamera.cc  RGBDCamera.h  main.cc
test/: CMakeLists.txt  CalibratorTest.cc  CompressionTest.cc  ConvTest.cc  Environment.cc  ExceptionTest.cc  GeometryTest.cc  GrayCodeTest.cc  GreyCodeTest.cc  LaserDetectorTest.cc  PointCloudTest.cc  ProCamSystemTest.cc  ProjectionTest.cc
test/mock/: MockConnectionHandler.cc  MockConnectionHandler.h  MockEnvironment.cc  MockEnvironment.h
tools/: deploy.py  lasertrack.py  runcommon.py  runmaster.py  runprocam.py
tools/phabricator/: UnitTestEngine.php  __phutil_library_init__.php  __phutil_library_map__.php
