# This file is part of the Group 13 Project.
# Licensing information can be found in the LICENSE file.
# (C) 2015 Group 13. All rights reserved.

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(DerpVision)

# C++ flags.
ADD_COMPILE_OPTIONS(-std=c++1y)
ADD_COMPILE_OPTIONS(-D thread_local=__thread)
ADD_COMPILE_OPTIONS(-Wall)
ADD_COMPILE_OPTIONS(-Werror)
ADD_COMPILE_OPTIONS(-Wextra)
ADD_COMPILE_OPTIONS(-pthread)
ADD_COMPILE_OPTIONS(-Wmissing-prototypes)
IF (CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pthread")
ENDIF()

# Create a __FILENAME__ macro that only contains a relative path.
SET(CMAKE_CXX_FLAGS
    "${CMAKE_CXX_FLAGS} -D__FILENAME__='\"$(subst ${CMAKE_SOURCE_DIR}/,,$(abspath $<))\"'"
)

# Don't judge.
IF ($ENV{HANQ})
  INCLUDE_DIRECTORIES(/vol/bitbucket/qh812/include)
  INCLUDE_DIRECTORIES(/homes/qh812/work/libfreenect2/src)
  SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} /vol/bitbucket/qh812/lib)
  ADD_LIBRARY(glfw3 STATIC IMPORTED)
  ADD_LIBRARY(thrift STATIC IMPORTED)
  SET_TARGET_PROPERTIES(glfw3 PROPERTIES
    IMPORTED_LOCATION /vol/bitbucket/qh812/lib/libglfw3.a)
  SET_TARGET_PROPERTIES(thrift PROPERTIES
    IMPORTED_LOCATION /vol/bitbucket/qh812/lib/libthrift.a)
ELSE()
  FIND_PACKAGE(freenect2)
ENDIF()

# Enable unit testing.
ENABLE_TESTING()

# Find packages using CMake.
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(GTest REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

# Set up include directories.
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${freenect2_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OpenGL_INCLUDE_DIRS})

# Build everything in subfolders.
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(slave)
ADD_SUBDIRECTORY(master)
